--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1> This is demo for git git and github in MacOS </h1>
     <p>test</p>
+
+
+
+    <p>今日は10/10
+        gitの勉強をした</p>
 </body>
 </html>
